--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
   <meta name="Description" content="Website para mudança de plano">
   <meta name="keywords" content="Html, página, plano, basic, pro, premium">
   
-  <link rel="stylesheet" href="./CSS/Style.css">
+  <link rel="stylesheet" href="./Style.css">
 </head>
 <body>
   <header class="container-header">
